# youtube-video-chat

./: app.py  helpers.py  mock_openai_client.py  mypy.ini  pyproject.toml  requirements.txt  test.py  thread.py  youtube_assistant.py  youtube_thread.py  youtube_transcript_fetcher.py
tests/: test_app.py  test_youtube_assistant.py
youtube_video_chat/: app.py  helpers.py  youtube_thread.py
